# spark-operator

./: .gitignore  CHANGELOG.md  Cargo.toml  Makefile  README.adoc  README.md  deny.toml
.ci/integration-tests/aws-eks/: cluster.yaml
.ci/integration-tests/azure-aks/: cluster.yaml  test.sh
.ci/integration-tests/ionos-k8s/: cluster.yaml
.github/ISSUE_TEMPLATE/: config.yml  new_version.md
.github/workflows/: build.yml  build_artifacts.yml  nightly.yml  publish_dev_artifacts.yml  publish_main_artifacts.yml  publish_pr_artifacts.yml  publish_release_artifacts.yml  rust.yml
common/: Cargo.toml
common/data/test/: sparkcluster_complete.yaml  test_spark_cluster.yaml
common/src/: constants.rs  lib.rs  test.rs
crd/: Cargo.toml  restart.command.crd.yaml  sparkcluster.command.restart.crd.yaml  sparkcluster.crd.yaml  sparkcommand.crd.yaml  start.command.crd.yaml  stop.command.crd.yaml
crd/src/: command.rs  commands.rs  error.rs  lib.rs  restart_command.rs  start_command.rs  stop_command.rs
deploy/: DO_NOT_EDIT.md
deploy/config-spec/: properties.yaml
deploy/crd/: restart.command.crd.yaml  sparkcluster.crd.yaml  start.command.crd.yaml  stop.command.crd.yaml
deploy/helm/spark-operator/: Chart.yaml  README.md  values.yaml
deploy/helm/spark-operator/configs/: properties.yaml
deploy/helm/spark-operator/crds/: crds.yaml
deploy/manifests/: configmap.yaml  crds.yaml  deployment.yaml  roles.yaml  serviceaccount.yaml
docker/: Dockerfile
docs/: antora.yml
docs/modules/ROOT/: nav.adoc
docs/modules/ROOT/pages/: commandline_args.adoc  config_properties.adoc  configuration.adoc  env_var_args.adoc  index.adoc  installation.adoc  usage.adoc
docs/modules/ROOT/partials/: supported-versions.adoc
examples/: restart.command.example.yaml  simple-spark-cluster.yaml  sparkcluster.example.v3.0.1.yaml  sparkcommand.example.restart.yaml  start.command.example.yaml  stop.command.example.yaml
operator/: Cargo.toml
operator/src/: command_utils.rs  config.rs  error.rs  lib.rs  pod_utils.rs
packaging/debian/: stackable-spark-operator.service
packaging/rpm/SOURCES/stackable-spark-operator-VERSION/usr/lib/systemd/system/: stackable-spark-operator.service
rust/common/: Cargo.toml
rust/crd/: Cargo.toml
rust/crd/src/: commands.rs  constants.rs  lib.rs
rust/operator/: Cargo.toml
rust/operator-binary/: Cargo.toml  build.rs
rust/operator-binary/src/: config.rs  discovery.rs  error.rs  main.rs  spark_controller.rs  stackable-spark-operator.rs  util.rs
rust/operator/src/: command_utils.rs  config.rs  error.rs  lib.rs  pod_utils.rs
rust/test_utils/: Cargo.toml
rust/test_utils/src/: lib.rs
scripts/: generate-manifests.sh
server/: Cargo.toml  build.rs
server/packaging/rpm/SOURCES/stackable-spark-operator-server-VERSION/usr/lib/systemd/system/: stackable-spark-operator-server.service
server/src/: main.rs
test_utils/: Cargo.toml
test_utils/data/: test_spark_cluster.yaml
test_utils/src/: cluster.rs  lib.rs
tests/: test-definition.yaml
tests/templates/kuttl/smoke/: 01-assert.yaml  01-install-spark.yaml.j2  02-assert.yaml  02-upscale-workers.yaml.j2
