[package]
name = "stackable-spark-crd"
version = "0.1.0"
authors = ["Malte Sander <malte.sander.it@gmail.com>"]
edition = "2018"

[dependencies]
stackable-operator = { git = "https://github.com/stackabletech/operator-rs.git", branch = "main" }

k8s-openapi = { version = "0.11.0", default-features = false, features = ["v1_20"] }
kube = { version = "0.49", default-features = false, features = ["derive"] }
schemars = "0.8"
semver = "0.11"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
strum = { version = "0.20", features = ["derive"] }
strum_macros = "0.20"

thiserror = "1.0"
derivative = "2.2"

[features]
default = ["native-tls"]
native-tls = ["kube/native-tls"]
rustls-tls = ["kube/rustls-tls"]
