[package]
authors = ["Malte Sander <malte.sander.it@gmail.com>"]
description = "Contains the Apache Spark CRD structs and utilities"
edition = "2018"
license = "Apache-2.0"
name = "stackable-spark-crd"
version = "0.1.0"

[dependencies]
stackable-operator = { git = "https://github.com/stackabletech/operator-rs.git", branch = "main" }
stackable-spark-common = { path = "../common" }

derivative = "2.2"
k8s-openapi = { version = "0.11.0", default-features = false, features = ["v1_20"] }
kube = { version = "0.52", default-features = false, features = ["derive"] }
schemars = "0.8"
semver = "0.11"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_yaml = "0.8"
strum = { version = "0.20", features = ["derive"] }
strum_macros = "0.20"
thiserror = "1.0"

[dev-dependencies]
stackable-spark-test-utils = { path = "../test_utils" }

[features]
default = ["native-tls"]
native-tls = ["kube/native-tls"]
rustls-tls = ["kube/rustls-tls"]
