[package]
authors = ["Malte Sander <malte.sander.it@gmail.com>"]
description = "Contains the Apache Spark CRD structs and utilities"
edition = "2018"
license = "OSL-3.0"
name = "stackable-spark-crd"
version = "0.1.0"

[dependencies]
product-config = { git = "https://github.com/stackabletech/product-config.git", branch = "main" }
stackable-operator = { git = "https://github.com/stackabletech/operator-rs.git", branch = "command_refactor" }
stackable-spark-common = { path = "../common" }

k8s-openapi = { version = "0.12.0", default-features = false, features = ["v1_20"] }
kube = { git = "https://github.com/lfrancke/kube-rs", branch="crd_generic_spec_status", default-features = false, features = ["derive"] }
schemars = "0.8"
semver = "1.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_yaml = "0.8"
strum = { version = "0.21", features = ["derive"] }
strum_macros = "0.21"
thiserror = "1.0"

[dev-dependencies]
stackable-spark-test-utils = { path = "../test_utils" }

[features]
default = ["native-tls"]
native-tls = ["kube/native-tls"]
rustls-tls = ["kube/rustls-tls"]
