[package]
name = "stackable-spark-operator"
description = "Kubernetes Operator library to handle Apache Spark custom resources"
version = "0.1.0"
authors = ["Malte Sander <malte.sander.it@gmail.com>"]
edition = "2018"
license = "Apache-2.0"

[dependencies]
stackable-spark-common = { path = "../common" }
stackable-spark-crd = { path = "../crd" }
stackable-operator = { git = "https://github.com/stackabletech/operator-rs.git", branch = "main" }

async-trait = "0.1"
chrono = "0.4"
futures = "0.3"
json-patch = "0.2"
k8s-openapi = { version = "0.11.0", default-features = false, features = ["v1_20"] }
kube = { version = "0.52", default-features = false, features = ["derive"] }
kube-runtime = "0.52"
semver = "0.11"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
strum = { version = "0.21", features = ["derive"] }
strum_macros = "0.20"
thiserror = "1.0"
tracing = "0.1"

[dev-dependencies]
stackable-spark-test-utils = { path = "../test_utils" }
