[package]
name = "stackable-spark-operator"
description = "Kubernetes Operator library to handle Apache Spark custom resources"
version = "0.1.0"
authors = ["Malte Sander <malte.sander.it@gmail.com>"]
edition = "2018"
license = "OSL-3.0"

[dependencies]
product-config = { git = "https://github.com/stackabletech/product-config.git", branch = "main" }
stackable-operator = { path = "../../operator-rs" }
stackable-spark-common = { path = "../common" }
stackable-spark-crd = { path = "../crd" }

async-trait = "0.1"
chrono = "0.4"
futures = "0.3"
json-patch = "0.2"
k8s-openapi = { version = "0.12.0", default-features = false, features = ["v1_20"] }
kube = { version = "0.58", default-features = false, features = ["derive"] }
semver = "1.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
strum = { version = "0.21", features = ["derive"] }
strum_macros = "0.21"
thiserror = "1.0"
tracing = "0.1"

[dev-dependencies]
stackable-spark-test-utils = { path = "../test_utils" }
