[package]
name = "stackable-spark-operator-server"
description = "Stackable Spark Operator"
version = "0.1.0-nightly"
authors = ["Malte Sander <malte.sander.it@gmail.com>"]
edition = "2018"
license = "Apache-2.0"

[dependencies]
stackable-operator = { git = "https://github.com/stackabletech/operator-rs.git", branch = "main" }
stackable-spark-crd = { path = "../crd" }
stackable-spark-operator = { path = "../operator" }

serde_yaml = "0.8"
tokio = { version = "1.8", features = ["macros", "rt-multi-thread"] }
tracing = "0.1"

[package.metadata.deb]
maintainer-scripts = "packaging/debian/"
systemd-units = { enable = false }
assets = [
    ["../target/release/stackable-spark-operator-server", "opt/stackable/spark-operator/", "755"],
]
