[package]
name = "stackable-spark-operator-server"
description = "Stackable Spark Operator"
version = "0.1.0-nightly"
authors = ["Malte Sander <malte.sander.it@gmail.com>"]
edition = "2018"
license = "OSL-3.0"
build = "build.rs"

[dependencies]
stackable-operator = { path = "../../operator-rs" }
stackable-spark-crd = { path = "../crd" }
stackable-spark-operator = { path = "../operator" }

anyhow = "1.0"
clap = "2.33"
serde_yaml = "0.8"
tokio = { version = "1.9", features = ["macros", "rt-multi-thread"] }
tracing = "0.1"

[build-dependencies]
stackable-operator = { path = "../../operator-rs" }
stackable-spark-crd = { path = "../crd" }

[package.metadata.deb]
maintainer-scripts = "packaging/debian/"
systemd-units = { enable = false }
assets = [
    ["../target/release/stackable-spark-operator-server", "opt/stackable/spark-operator/", "755"],
    ["../deploy/crd/sparkcluster.crd.yaml", "etc/stackable/spark-operator/crd/", "644"],
    ["../deploy/crd/start.command.crd.yaml", "etc/stackable/spark-operator/crd/", "644"],
    ["../deploy/crd/restart.command.crd.yaml", "etc/stackable/spark-operator/crd/", "644"],
    ["../deploy/crd/stop.command.crd.yaml", "etc/stackable/spark-operator/crd/", "644"],
    ["../deploy/config-spec/properties.yaml", "etc/stackable/spark-operator/config-spec/", "644"],
]
