[package]
name = "stackable-spark-operator-server"
description = "Stackable Operator for Apache Spark"
version = "0.1.0-nightly"
authors = ["Malte Sander <malte.sander.it@gmail.com>"]
edition = "2018"
license = "OSL-3.0"
build = "build.rs"

[dependencies]
stackable-operator = { git = "https://github.com/stackabletech/operator-rs.git", branch = "main" }
stackable-spark-crd = { path = "../crd" }
stackable-spark-operator = { path = "../operator" }

serde_yaml = "0.8"
tokio = { version = "1.9", features = ["macros", "rt-multi-thread"] }
tracing = "0.1"

[build-dependencies]
built = { version =  "0.5", features = ["chrono", "git2"] }

[package.metadata.deb]
maintainer-scripts = "packaging/debian/"
systemd-units = { enable = false }
assets = [
    ["../target/release/stackable-spark-operator-server", "opt/stackable/spark-operator/", "755"],
    ["../deploy/crd/sparkcluster.crd.yaml", "etc/stackable/spark-operator/crd/", "644"],
    ["../deploy/crd/start.command.crd.yaml", "etc/stackable/spark-operator/crd/", "644"],
    ["../deploy/crd/restart.command.crd.yaml", "etc/stackable/spark-operator/crd/", "644"],
    ["../deploy/crd/stop.command.crd.yaml", "etc/stackable/spark-operator/crd/", "644"],
    ["../deploy/config-spec/properties.yaml", "etc/stackable/spark-operator/config-spec/", "644"],
]
