[package]
name = "stackable-spark-test-utils"
version = "0.1.0"
authors = ["Malte Sander <malte.sander.it@gmail.com>"]
edition = "2018"

[dependencies]
stackable-spark-crd = { path = "../crd" }
stackable-spark-operator = { path = "../operator" }
k8s-openapi = { version = "0.11.0", default-features = false, features = ["v1_20"] }
kube = { version = "0.52", default-features = false, features = ["derive"] }

serde = { version = "1.0", features = ["derive"] }
serde_yaml = "0.8"


