[package]
name = "stackable-spark-test-utils"
version = "0.1.0"
authors = ["Malte Sander <malte.sander.it@gmail.com>"]
edition = "2018"
license = "OSL-3.0"

[dependencies]
stackable-operator = { git = "https://github.com/stackabletech/operator-rs.git", branch = "command_refactor" }
stackable-spark-crd = { path = "../crd" }
stackable-spark-operator = { path = "../operator" }

k8s-openapi = { version = "0.12.0", default-features = false, features = ["v1_20"] }
kube = { git = "https://github.com/kube-rs/kube-rs.git", branch="master", default-features = false, features = ["derive"] }
serde = { version = "1.0", features = ["derive"] }
serde_yaml = "0.8"


