[package]
authors = ["Malte Sander <malte.sander.it@gmail.com>"]
description = "Contains the Apache Spark CRD structs and utilities"
edition = "2018"
license = "OSL-3.0"
name = "stackable-spark-crd"
repository = "https://github.com/stackabletech/spark-operator"
version = "0.5.0-nightly"

[dependencies]
stackable-operator = { git = "https://github.com/stackabletech/operator-rs.git", tag = "0.5.0" }

semver = "1.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_yaml = "0.8"
strum = { version = "0.22", features = ["derive"] }
strum_macros = "0.22"
snafu = "0.6.10"

[features]
default = ["native-tls"]
native-tls = ["stackable-operator/native-tls"]
rustls-tls = ["stackable-operator/rustls-tls"]
