[package]
authors = ["Stackable GmbH <info@stackable.de>"]
description = "Stackable Operator for Apache Spark"
edition = "2018"
license = "OSL-3.0"
name = "stackable-spark-operator"
repository = "https://github.com/stackabletech/spark-operator"
version = "0.5.0-nightly"

[dependencies]
stackable-operator = { git = "https://github.com/stackabletech/operator-rs.git", tag = "0.6.0" }
stackable-spark-crd = { path = "../crd" }
anyhow = "1.0"
fnv = "1.0.7"
futures = { version = "0.3.17", features = ["compat"] }
lazy_static = "1.4.0"
serde_yaml = "0.8"
snafu = "0.6.10"
structopt = "0.3.23"
tokio = { version = "1.13", features = ["macros", "rt-multi-thread"] }
tracing = "0.1"

[build-dependencies]
built = { version =  "0.5", features = ["chrono", "git2"] }
stackable-operator = { git = "https://github.com/stackabletech/operator-rs.git", tag="0.6.0" }
stackable-spark-crd = { path = "../crd" }

[[bin]]
name = "stackable-spark-operator"
path = "src/main.rs"
