[package]
authors = ["Stackable GmbH <info@stackable.de>"]
description = "Stackable Operator for Apache Spark"
edition = "2021"
license = "OSL-3.0"
name = "stackable-spark-operator"
repository = "https://github.com/stackabletech/spark-operator"
version = "0.6.0-nightly"

[dependencies]
stackable-operator = { git = "https://github.com/stackabletech/operator-rs.git", tag = "0.15.0" }
stackable-spark-crd = { path = "../crd" }
anyhow = "1.0"
clap = "3.1"
fnv = "1.0"
futures = { version = "0.3", features = ["compat"] }
lazy_static = "1.4"
serde_yaml = "0.8"
snafu = "0.7"
strum = { version = "0.24", features = ["derive"] }
tokio = { version = "1.19", features = ["macros", "rt-multi-thread"] }
tracing = "0.1"

[build-dependencies]
built = { version =  "0.5", features = ["chrono", "git2"] }
stackable-operator = { git = "https://github.com/stackabletech/operator-rs.git", tag="0.15.0" }
stackable-spark-crd = { path = "../crd" }
