[package]
authors = ["Malte Sander <malte.sander.it@gmail.com>"]
description = "Kubernetes Operator library to handle Apache Spark custom resources"
edition = "2018"
license = "OSL-3.0"
name = "stackable-spark-operator"
repository = "https://github.com/stackabletech/spark-operator"
version = "0.3.0-nightly"

[dependencies]
product-config = { git = "https://github.com/stackabletech/product-config.git", tag = "0.1.0" }
stackable-operator = { git = "https://github.com/stackabletech/operator-rs.git", branch = "main" }
stackable-spark-common = { path = "../common" }
stackable-spark-crd = { path = "../crd" }

async-trait = "0.1"
chrono = "0.4"
futures = "0.3"
json-patch = "0.2"
k8s-openapi = { version = "0.12", default-features = false }
kube = { version = "0.58", default-features = false, features = ["derive"] }
semver = "1.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
strum = { version = "0.21", features = ["derive"] }
strum_macros = "0.21"
thiserror = "1.0"
tracing = "0.1"

[dev-dependencies]
stackable-spark-test-utils = { path = "../test_utils" }
