[package]
authors = ["Malte Sander <malte.sander.it@gmail.com>"]
description = "Kubernetes Operator library to handle Apache Spark custom resources"
edition = "2018"
license = "OSL-3.0"
name = "stackable-spark-operator"
repository = "https://github.com/stackabletech/spark-operator"
version = "0.4.0"

[dependencies]
stackable-operator = { git = "https://github.com/stackabletech/operator-rs.git", tag = "0.4.0" }
stackable-spark-common = { path = "../common" }
stackable-spark-crd = { path = "../crd" }

async-trait = "0.1"
chrono = "0.4"
futures = "0.3"
json-patch = "0.2"
semver = "1.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
strum = { version = "0.22", features = ["derive"] }
strum_macros = "0.22"
thiserror = "1.0"
tracing = "0.1"
