[package]
name = "stackable-spark-test-utils"
version = "0.3.0-nightly"
authors = ["Malte Sander <malte.sander.it@gmail.com>"]
edition = "2018"
license = "OSL-3.0"

[dependencies]
stackable-operator = { git = "https://github.com/stackabletech/operator-rs.git", tag = "0.2.0" }
stackable-spark-crd = { path = "../crd" }
stackable-spark-operator = { path = "../operator" }

k8s-openapi = { version = "0.12", default-features = false }
kube = { version = "0.58", default-features = false, features = ["derive"] }
serde = { version = "1.0", features = ["derive"] }
serde_yaml = "0.8"


