[package]
authors = ["Malte Sander <malte.sander.it@gmail.com>"]
description = "Test util library for the Stackable Operator for Apache Spark"
edition = "2018"
license = "OSL-3.0"
name = "stackable-spark-test-utils"
repository = "https://github.com/stackabletech/spark-operator"
version = "0.3.0-nightly"

[dependencies]
stackable-operator = { git = "https://github.com/stackabletech/operator-rs.git", tag = "0.2.2" }
stackable-spark-crd = { path = "../crd" }
stackable-spark-operator = { path = "../operator" }

k8s-openapi = { version = "0.13", default-features = false }
kube = { version = "0.60", default-features = false, features = ["derive"] }
serde = { version = "1.0", features = ["derive"] }
serde_yaml = "0.8"


