[package]
authors = ["Malte Sander <malte.sander.it@gmail.com>"]
description = "Test util library for the Stackable Operator for Apache Spark"
edition = "2018"
license = "OSL-3.0"
name = "stackable-spark-test-utils"
repository = "https://github.com/stackabletech/spark-operator"
version = "0.3.0-nightly"

[dependencies]
#stackable-operator = { git = "https://github.com/stackabletech/operator-rs.git", tag = "0.2.3" }
# Remove the following line and uncomment the line above before merging:
stackable-operator = { git = "https://github.com/stackabletech/operator-rs.git", branch = "main" }
stackable-spark-crd = { path = "../crd" }
stackable-spark-operator = { path = "../operator" }

serde = { version = "1.0", features = ["derive"] }
serde_yaml = "0.8"


